--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="cv">
         <header class="cv-header">
-            <h1 class="name">Name</h1>
-            <p>andy@kyosei.ai</p>
+            <h1 class="name">Troy</h1>
+            <p>MtroychuangM@outlook.com</p>
         </header>
         <section class="cv-body">
             <div class="intro">
